# hesimusic

./: .gitignore  .gitmodules  FINAL_IMPLEMENTATION_SUMMARY.md  FLOW_CHAIN_FIX.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_SONGLIST_PERF.md  LICENSE  MEDIA3_DURATION_ISSUE_ANALYSIS.md  MEDIA3_DURATION_ISSUE_SUMMARY_EN.md  MP3_PARSING_ERROR_FIX.md  MP3_PARSING_ERROR_FIX_CN.md  PERFORMANCE_ANALYSIS_REPORT.md  PERFORMANCE_OPTIMIZATION_IMPLEMENTATION.md  PERFORMANCE_OPTIMIZATION_SUMMARY_EN.md  POWER_CONSUMPTION_ANALYSIS.md  README.md  README_MEDIA3_FIX.md  REFACTORING_SUMMARY.md  SCAN_FIX_SUMMARY.md  SCAN_PROGRESS_FIX.md  SCAN_PROGRESS_FLOW.md  SONGLIST_PERFORMANCE_FIX.md  SONGLIST_PERFORMANCE_FIX_EN.md  TESTING_GUIDE.md  TRACK_MEMORY_BUG_FIX.md  chat-log.md  design.md  design.scan.md  impl.scan.md  issue.scan.md  plan_overview.md  plan_phase_1.md  plan_phase_2.md  plan_phase_3.md  plan_phase_4.md  plan_phase_5.md  readme.md  settings.gradle.kts  verify_scan_fix.sh
.github/chatmodes/: hesi-mode.chatmode.md
.github/workflows/: build-app.yml  build-with-icon.yml  release.yml
app/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
app/app/: build.gradle.kts
app/gradle/: libs.versions.toml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
hesimusic-client/: settings.gradle.kts
hesimusic-client/app/: build.gradle.kts
hesimusic-client/gradle/: libs.versions.toml
tools/generate-icons/: package.json  (+1 more)
ui/: ARCHITECTURE.md  README.md  index.html  package.json  vite.config.ts
(+151 files in other folders)
